# transparencia-patrimonial

./: .gitignore  Desafío_PIDA.ipynb  Dockerfile  README.md  analisis_anomalias_territorial.csv  docker-compose.yaml  mzscore_detalle.csv  mzscore_ranking_provincias.csv  provincias_cantones_distritos_costa_rica.json  pyproject.toml  ranking_provincias_anomalias.csv  requirements.txt
algorithms/: lof_model.py
app/: app.py
notebooks/: Desafío_PIDA.ipynb
paper_mzscore/: README.md  mzscore_pipeline.py
scripts/: MAD.py  deteccion_anomala.py
