[tool.poetry]
name = "desafio-pida"
version = "0.1.0"
description = ""
authors = ["JersonPQ <prendes.2507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
pandas = "^2.3.3"
geopandas = "^1.1.1"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
