[tool.poetry]
name = "transparencia-patrimonial"
version = "0.1.0"
description = ""
authors = ["samuel valverde <savalverde@estudiantec.cr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
pandas = "^2.3.3"
geopandas = "^1.1.1"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
streamlit = "^1.51.0"
plotly = "^6.3.1"
joblib = "^1.5.2"
scikit-learn = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
